testsuite/tests/properties/invalid_enum_dflt_val/test.out
== kwargs.lkt ==
kwargs.lkt:3:2: error: exactly one positional argument expected
3 | @with_default(value=a) enum MyEnum {
  |  ^^^^^^^^^^^^


== no_arg.lkt ==
no_arg.lkt:3:2: error: exactly one positional argument expected
3 | @with_default() enum MyEnum {
  |  ^^^^^^^^^^^^


== no_such_value.lkt ==
no_such_value.lkt:3:15: error: no such value in this enum
3 | @with_default(d) enum MyEnum {
  |               ^


== not_id.lkt ==
not_id.lkt:3:15: error: enum value identifier expected
3 | @with_default(0) enum MyEnum {
  |               ^


== too_many_args.lkt ==
too_many_args.lkt:3:2: error: exactly one positional argument expected
3 | @with_default(a, b) enum MyEnum {
  |  ^^^^^^^^^^^^


lkt_compile: Done
